# hwp-parser

./: .env.example  README.md  pyproject.toml  zensical.toml
.github/: copilot-instructions.md
.github/workflows/: check-gradio-compat.yml  ci.yml  cloudflare-pages.yml  coverage.yml  deploy-space.yml  docs.yml
docs/: index.md  troubleshooting.md
docs/getting-started/: installation.md  overview.md  quickstart.md
docs/guide/: cli.md  core-usage.md  llama-index.md  overview.md  rest-api.md
src/hwp_parser/: __init__.py
src/hwp_parser/adapters/: __init__.py
src/hwp_parser/adapters/api/: __init__.py  config.py  service.py
src/hwp_parser/adapters/llama_index/: __init__.py  reader.py
src/hwp_parser/cli/: __init__.py  app.py
src/hwp_parser/core/: __init__.py  converter.py  worker.py
src/hwp_parser/web/: __init__.py
src/stubs/hwp5/: __init__.pyi  hwp5html.pyi  xmlmodel.pyi
tests/: __init__.py  benchmarks.py  conftest.py  test_api.py  test_benchmark.py  test_cli.py  test_cli_web.py  test_config.py  test_converter.py  test_converter_worker.py  test_init.py  test_llama_index_api.py  test_python_api.py  test_rest_api.py  test_web.py  test_worker_unit.py
tests/fixtures/: ER17702_대학원과정 영어교과 운영 및 졸업이수요건에 관한 지침_ori.hwp  ER31107_교원퇴직절차에관한지침_ori.hwp  ER31525_기혼자아파트운영지침_ori.hwp  ER31702_학사과정 영어교과 운영 및 졸업 이수 요건에 관한 지침_ori.hwp  FR00704_석좌제도운영규칙_ori.hwp  FR00717_연구원채용규칙_ori.hwp  FR00801_회계규정_ori.hwp  FR00804_예산요령_ori.hwp  _4_문서정보구분[대외문서_협조문_내부기안_보안문서]_ori.hwp  _5_문서상태아이콘_ori.hwp
web/: app.py
