[project]
name = "hwp-parser"
version = "0.1.0"
description = "HWP file parser using pyhwp CLI tools with optional LlamaIndex adapter"
authors = [
    { name = "devcomfort" }
]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "AGPL-3.0" }
keywords = ["hwp", "parser", "document", "korean", "pyhwp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
    "pyhwp>=0.1b15",
    "html2text>=2025.4.15",
    "html-to-markdown>=2.23.1",
    "llama-index-core>=0.14.12",
    "bentoml>=1.4.33",
    "pydantic>=2.12.5",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
llama-index = [
    "llama-index-core>=0.10.0",
]
bentoml = [
    "bentoml>=1.4.33",
    "pydantic>=2.0.0",
]
all = [
    "hwp-parser[llama-index]",
    "hwp-parser[bentoml]",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
# BentoML 서비스 실행 CLI
hwp-serve = "hwp_parser.adapters.api:serve"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "coverage>=7.13.1",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "zensical>=0.0.15",
]

[tool.rye.scripts]
# 로컬 API 서버 실행
serve = "bentoml serve hwp_parser.adapters.api:HWPService"
# 기본 테스트(병렬)
test = "pytest tests/ -v -n auto --dist=loadscope"
# 커버리지 측정(병렬, 터미널 리포트)
test-cov = "pytest tests/ -v -n auto --dist=loadscope --cov=hwp_parser --cov-report=term-missing"
# 커버리지 측정(병렬, 터미널+HTML 리포트)
test-cov-html = "pytest tests/ -v -n auto --dist=loadscope --cov=hwp_parser --cov-report=term-missing --cov-report=html"
# 벤치마크 실행(성능 측정)
benchmark = "pytest tests/benchmarks.py -v --benchmark-verbose"
# 커버리지 실행 + 리포트 + HTML 생성
cov = "coverage run -m pytest tests/ -v -n auto --dist=loadscope && coverage report -m && coverage html"
# 커버리지 터미널 리포트만 생성
cov-report = "coverage report -m"
# 커버리지 HTML 리포트만 생성
cov-html = "coverage html"
# 문서 로컬 서버
docs = "zensical serve"
# 문서 빌드
docs-build = "zensical build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmark tests",
]
filterwarnings = [
    # pytest-benchmark + xdist 충돌 경고 무시
    "ignore::pytest_benchmark.logger.PytestBenchmarkWarning",
    # BentoML의 Pydantic deprecation 경고 무시 (외부 라이브러리)
    "ignore:The `__get_pydantic_core_schema__` method:pydantic.warnings.PydanticDeprecatedSince211",
]

[tool.coverage.run]
source = ["src/hwp_parser"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hwp_parser"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
